Login and Register components added

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,11 +2,20 @@
     display: flex;
 }
 
+.container div{
+   padding: 40px;
+}
+
 .logo a{
     text-decoration: none;
 }
 
 .menu a{
+    padding: 1em;
+    text-decoration: none;
+}
+
+.auth a{
     padding: 1em;
     text-decoration: none;
 }
