Register form added

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -8,14 +8,17 @@
 
 .logo a{
     text-decoration: none;
+    color: black;
 }
 
 .menu a{
     padding: 1em;
     text-decoration: none;
+    color: black;
 }
 
 .auth a{
     padding: 1em;
     text-decoration: none;
+    color: black;
 }
