--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -1,2 +1,8 @@
-
-
+.background {
+    margin: 0;
+    padding: 0;
+    background-image: url('./../../assets/1617011668.5661.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 95vh;
+  }
