--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,23 +1,27 @@
 .container{
 display: flex;
    flex-direction: column;
-   width: 200px;
-   padding-left: 200px;
+   width: 100px;
+   padding-left: 80px;
 }
 
 .container div{
    padding: 40px;
+   font-weight: bold;
 }
 
 .logo a{
     text-decoration: none;
-    color: black;
+    color: rgb(41, 41, 109);
+    overflow: hidden;
+    white-space: nowrap;
+    padding-left: 1em;
 }
 
 .menu a{
     padding: 1em;
     text-decoration: none;
-    color: black;
+    color: rgb(41, 41, 109);
     display: flex;
     flex-direction: column;
 }
@@ -25,7 +29,7 @@ display: flex;
 .auth a{
     padding: 1em;
     text-decoration: none;
-    color: black;
+    color: rgb(41, 41, 109);
     display: flex;
     flex-direction: column;
 }
