--- a/src/components/register/Register.module.css
+++ b/src/components/register/Register.module.css
@@ -31,7 +31,7 @@ hr {
 
 /* Set a style for the submit/register button */
 .registerbtn {
-  background-color: #04AA6D;
+  background-color: rgb(41, 41, 109);
   color: white;
   padding: 16px 20px;
   margin: 8px 0;
