--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Dancing Script');
+
 body{
     margin: 0;
+    font-family: 'Dancing Script';
+    font-size: 18px;
 }
